border de validation

--- a/modal.css
+++ b/modal.css
@@ -527,3 +527,12 @@ footer {
   }
 }
 
+/* MISE EN PAGE VALIDATION FORM. */
+
+input:invalid{
+  border: 2px solid red;
+}
+
+input:valid{
+  border: 2px solid grey;
+}
